Fixed issue [1899518]. Use commons-codec library for base64 encoding instead of sun.misc API.
--HG--
extra : convert_revision : svn%3A9509db7c-3d11-0410-ba00-cf6d01345df7/trunk%402497